Fixing spacing

--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ p.legend {
 }
 
 @media (min-width: 800px) {
- div.hide, div.map, div.table, div.odds-ends p.legend {
+  div.map, div.table, div.odds-ends, p.legend {
     width: 70%;
   }
 }
